Various minor improvements to CSN1 dissecting code
This issue was migrated from bug 6789 in our old bug tracker.
Original bug information:
Reporter: Sylvain Munaut
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
0001-packet-csn1-Fix-indenting-of-the-CSN_UINT-subsection.patch: packet-csn1: Fix indenting of the CSN_UINT subsection
0002-packet-csn1-Add-new-maro-M_TYPE_LABEL-to-customize-n.patch: packet-csn1: Add new maro M_TYPE_LABEL to customize name of a TYPE entry
0003-packet-csn1-New-macro-M_FIXED_LABEL-to-customize-str.patch: packet-csn1: New macro M_FIXED_LABEL to customize string of a FIXED entry
0004-packet-csn1-Allow-CHOICE-elements-to-re-process-the-.patch: packet-csn1: Allow CHOICE elements to re-process the bits used for the choice
0005-packet-csn1-Make-new-M_CHOICE_IL-option-that-doesn-t.patch: packet-csn1: Make new M_CHOICE_IL option that doesn't show it as subtree
0006-packet-csn-Extend-CSN_SERIALIZE-to-allow-0-bit-of-le.patch: packet-csn: Extend CSN_SERIALIZE to allow 0 bit of length