From Sylvain Munaut: 0001-packet-csn1-Fix-indenting-of-the-CSN_UINT-subsection.patch 0002-packet-csn1-Add-new-maro-M_TYPE_LABEL-to-customize-n.patch 0003-packet-csn1-New-macro-M_FIXED_LABEL-to-customize-str.patch 0004-packet-csn1-Allow-CHOICE-elements-to-re-process-the-.patch 0005-packet-csn1-Make-new-M_CHOICE_IL-option-that-doesn-t.patch 0006-packet-csn-Extend-CSN_SERIALIZE-to-allow-0-bit-of-le.patch

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6789

svn path=/trunk/; revision=40847